fix: fixing getAll method